@startuml

title __GREEDY's Class Diagram__\n

  package sase.evaluation {
    package sase.evaluation.nfa {
      package sase.evaluation.nfa.lazy {
        package sase.evaluation.nfa.lazy.order {
          package sase.evaluation.nfa.lazy.order.algorithm {
            package sase.evaluation.nfa.lazy.order.algorithm.adaptive.greedy {
              class GreedyAdaptiveOrderingAlgorithm {
                  + calculateEvaluationOrder()
                  - isInvariantBasedAdaptationEnabled()
                  # selectNextEventType()
                  - selectFirstEventType()
                  - getTightestInvariant()
                  - testAndCreateEventTypeInvariant()
              }
            }
          }
        }
      }
    }
  }
  

  package sase.evaluation {
    package sase.evaluation.nfa {
      package sase.evaluation.nfa.lazy {
        package sase.evaluation.nfa.lazy.order {
          package sase.evaluation.nfa.lazy.order.algorithm {
            package sase.evaluation.nfa.lazy.order.algorithm.adaptive.greedy {
              class GreedyInvariantCalculator {
                  - prefixCardinality : double
                  + GreedyInvariantCalculator()
                  + calculateInvariantValue()
              }
            }
          }
        }
      }
    }
  }
  

  package sase.evaluation {
    package sase.evaluation.nfa {
      package sase.evaluation.nfa.lazy {
        package sase.evaluation.nfa.lazy.order {
          package sase.evaluation.nfa.lazy.order.algorithm {
            package sase.evaluation.nfa.lazy.order.algorithm.adaptive.greedy {
              class GreedyInvariantInput {
                  + eventType : EventType
                  + condition : CNFCondition
                  + GreedyInvariantInput()
              }
            }
          }
        }
      }
    }
  }
  

  GreedyAdaptiveOrderingAlgorithm -up-|> IOrderingAlgorithm
  GreedyInvariantCalculator -up-|> IInvariantCalculator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
